UIDATIMP-516 Decorator vertical alignment has been fixed

--- a/src/components/FlexibleForm/ControlDecorators/withReferenceValues/withReferenceValues.css
+++ b/src/components/FlexibleForm/ControlDecorators/withReferenceValues/withReferenceValues.css
@@ -5,13 +5,13 @@
   align-items: flex-start;
   & .options-dropdown {
     display: flex;
+    align-self: flex-end;
     height: 100%;
-    margin: 25px 0 0 -1px;
+    margin: 0 0 1rem;
     & button {
       min-width: 143px;
       height: 23px;
       padding: 0 5px 0 10px;
-      margin: 0 0 -1px;
       border-top: 1px solid rgba(0, 0, 0, 0.42);
       border-right: 1px solid rgba(0, 0, 0, 0.42);
       border-bottom: 1px solid rgba(0, 0, 0, 0.42);
